# autonomous_robot_gardener

./: .gitignore  README.md
bill_of_materials/: README.md
diff_drive_with_estop_wip/: CMakeLists.txt  controller.yaml  diff_drive_with_estop.cpp  diff_drive_with_estop.hpp  package.xml  package_layout.txt  plugin.xml
docs/: chassis_bom.md  electronics_bom.md
docs/trouble_shooting_and_tips/: Input_group.md  esp32_mapping.txt  ros2_cli_cheat_sheet.md
esp32_controls_diffbot_serial/: .gitignore  platformio.ini
esp32_controls_diffbot_serial/data/: index.html  index_goal.html  script.js  script_goal.js  style.css
esp32_controls_diffbot_serial/src/: encoders_stuff.h  main.cpp  motor_ctrl_stuff.h  serial_stuff.h
esp32_serial_bridge/: platformio.ini
esp32_serial_bridge/src/: esp_now_stuff.h  html_stuff_new.h  main.cpp  motor_ctrl_stuff.h  ssid_stuff.h
robot_docker_files/: Dockerfile  devcontainer.json
ros_ws/src/autonomous_robot/: CMakeLists.txt  package.xml
ros_ws/src/autonomous_robot/config/: my_controllers.yaml
ros_ws/src/autonomous_robot/description/: robot.urdf.xacro  ros2_control.xacro
ros_ws/src/autonomous_robot/description/xarm_xacros/: xarm.xacro
ros_ws/src/autonomous_robot/launch/: launch_robot.launch.py
ros_ws/src/autonomous_robot/worlds/: my_rviz.rviz
ros_ws/src/diffdrive_arduino/hardware/: diffbot_system.cpp
ros_ws/src/diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.hpp  diffbot_system.hpp
ros_ws/src/xarm_description/: CMakeLists.txt  README_joystick_ik.md
ros_ws/src/xarm_description/config/: joystick_ik.yaml  xarm_controllers.yaml
ros_ws/src/xarm_description/launch/: gz.launch.py  joint_slider_gui.launch.py  joystick_ik_gui.launch.py  launch_sim.xarm.launch.py  position_ik_gui.launch.py
ros_ws/src/xarm_description/scripts/: min_joy_listen_v2.py
ros_ws/src/xarm_description/tests/: tst_urdf.py
ros_ws/src/xarm_description/urdf/: ros2_control.arm.xacro  ros2_control_params.xacro  xarm.urdf  xarm_v2.urdf  xarm_v2_ik.urdf  xarm_world.urdf.xacro
ros_ws/src/xarm_description/xarm_description/: __init__.py  base_robot_gui.py
ros_ws/src/xarm_hardware/: README.md  package.xml  xarm_hardware.xml
ros_ws/src/xarm_hardware/bringup/launch/: xarm_hardware.launch.py
ros_ws/src/xarm_hardware/hardware/: trajectory_controller_config.yaml  xarm_hardware.cpp
src/autonomous_robot/description/: robot.urdf.xacro  ros2_control.xacro
src/autonomous_robot/description/xarm_xacros/: ros2_control_params.xacro  xarm.xacro  xarm_v2_old.urdf
src/autonomous_robot/launch/: joystick.launch.py  launch_sim.launch.py
src/diffdrive_arduino/hardware/: diffbot_system.cpp
src/xarm_description/: .gitignore  README.md  package.xml  tmpsetup.txt
src/xarm_description/config/: joystick_ik.yaml
src/xarm_description/launch/: arm.launch.py  joy_listener.launch.py  rqt.launch.py  view_robot.launch.py
src/xarm_description/scripts/: README_position_ik_gui.md  joint_slider_gui.py  joystick_ik_gui.py  min_joy_listen old.py  min_joy_listen.py  position_ik_gui.py  test_joy.py  test_joystick.py
src/xarm_description/tests/: tst_ik.ipynb  yolo_test.ipynb
src/xarm_description/urdf/: ros2_control.arm.xacro  xarm.urdf  xarm_v2.urdf  xarm_v2_ik_final.urdf  xarm_v3.urdf  xarm_v3_ik.urdf  xarm_world.urdf.xacro
src/xarm_hardware/: CMakeLists.txt
src/xarm_hardware/hardware/include/xarm_hardware/: serial_comms_esp32.hpp  xarm_hardware.hpp
xarm_software/micropython_xarm_control/: main.py
xarm_software/xarm_teleop/: teleopt_wifi.py  teleopt_wifi_old.py  tst_stuff.ipynb
xarm_stuff/xarm_teleop/tests/: test_serial_connection.py
