<?xml version="1.0"?>
<package format="3">
  <name>my_diffdrive_controller</name>
  <version>0.0.1</version>
  <description>DiffDrive controller with emergency stop</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>diff_drive_controller</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>

